Added Main User Inteface
User interface updated, now has a score keeper and a main menu.

--- a/FlappyBirdNeuralNetwork/FlappyBirdNeuralNetwork/FlappyBirdNeuralNetwork.csproj
+++ b/FlappyBirdNeuralNetwork/FlappyBirdNeuralNetwork/FlappyBirdNeuralNetwork.csproj
@@ -44,6 +44,8 @@
     <Compile Include="Assets\Asset.cs" />
     <Compile Include="Assets\NeuralNetworkDictionary.cs" />
     <Compile Include="FlappyBird\GameController.cs" />
+    <Compile Include="GlobalVariables.cs" />
+    <Compile Include="InterfaceHandler\InterfaceController.cs" />
     <Compile Include="MainGame.cs" />
     <Compile Include="Physics\PhysicsController.cs" />
     <Compile Include="Program.cs" />
