Neural network controllers implemented
The controller class which will controll the training and running of the neural network has now been implemented.

--- a/FlappyBirdNeuralNetwork/FlappyBirdNeuralNetwork/FlappyBirdNeuralNetwork.csproj
+++ b/FlappyBirdNeuralNetwork/FlappyBirdNeuralNetwork/FlappyBirdNeuralNetwork.csproj
@@ -53,6 +53,7 @@
     <Compile Include="NeuralNetwork\MainNeuralNetwork\NeuralNetworkMain.cs" />
     <Compile Include="NeuralNetwork\MainNeuralNetwork\Neuron.cs" />
     <Compile Include="NeuralNetwork\MainNeuralNetwork\RandomNumberGen.cs" />
+    <Compile Include="NeuralNetwork\NeuralNetworkController.cs" />
     <Compile Include="NeuralNetwork\TrainingData.cs" />
     <Compile Include="Physics\PhysicsController.cs" />
     <Compile Include="Program.cs" />
